<resources>
    <string name="app_name">Lab7</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="clear">CLEAR</string>
    <string name="password">Password</string>
    <string name="file_edit">File Edit</string>
    <string name="file_name">File Name</string>
    <string name="file_content_here">File Content Here</string>
    <string name="save">SAVE</string>
    <string name="load">LOAD</string>
    <string name="delete">DELETE</string>
</resources>
