<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lab7.MainActivity">

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/confirm_pass_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_password"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:layout_marginStart="10dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/clear_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/ok"
        android:text="@string/clear" />
</RelativeLayout>
